--- a/css/login.css
+++ b/css/login.css
@@ -1,29 +1,45 @@
 @charset "UTF-8";
 
-.email{
+.login {
+    padding: 5vh;
+    background-color: white;
+    margin: auto;
+    width: fit-content;
+    height: fit-content;
+    margin-top: 5vh;
+    text-align: center;
+    border-radius: 2vh;
+}
+
+.email {
     border-radius: 5vh;
     width: 100%;
     height: 3vh;
     font-size: large;
 }
-.senha{
+
+.senha {
     border-radius: 5vh;
     width: 100%;
     height: 3vh;
     font-size: large;
 }
-.email:hover{
+
+.email:hover {
     box-shadow: 2vh 2vh 5vh rgba(0, 0, 0, 0.5);
     border-color: gold;
 }
-.senha:hover{
+
+.senha:hover {
     box-shadow: 2vh 2vh 5vh rgba(0, 0, 0, 0.5);
     border-color: gold;
 }
-.logar{
+
+.logar {
     text-align: left;
 }
-.btn-entrar{
+
+.btn-entrar {
     border-radius: 5vh;
     width: fit-content;
     padding-left: 10vh;
@@ -37,7 +53,8 @@
     font-size: large;
     cursor: pointer;
 }
-.btn-cadastrar{
+
+.btn-cadastrar {
     border-radius: 5vh;
     width: fit-content;
     padding-left: 5vh;
@@ -49,40 +66,86 @@
     font-size: large;
     cursor: pointer;
 }
-.dados{
-    display: inline;
-}
-.senha{
-    display: inline;
+
+.senha {
     width: 50vh;
 }
-.olho{
-    width: 10vh;
-    padding-left: 2vh;
+
+.olho {
+    margin-left: 2vh;
+    cursor: pointer;
 }
-#aviso{
+
+.campo-senha {
+    display: flex;
+    flex-direction: row;
+}
+
+#aviso {
     border-radius: 2vh;
     background-color: red;
     color: white;
     margin-bottom: -2vh;
 }
-.msg{
+
+.msg {
     padding: 2vh;
 }
-.lembrar:hover{
+
+.lembrar:hover {
     border-color: gold;
 }
-.btn-entrar:hover{
+
+.btn-entrar:hover {
     background: gold;
     box-shadow: 20vh;
     box-shadow: 2vh 2vh 5vh rgba(0, 0, 0, 0.5);
 }
-.btn-cadastrar:hover{
+
+.btn-cadastrar:hover {
     background: gold;
     box-shadow: 20vh;
     box-shadow: 2vh 2vh 5vh rgba(0, 0, 0, 0.5);
 }
-.login:hover{
-    box-shadow: 20vh;
+
+.login:hover {
     box-shadow: 2vh 2vh 5vh rgba(0, 0, 0, 0.5);
+}
+
+body {
+    background-image: linear-gradient(90deg, rgba(255, 136, 0, 0.8), rgba(134, 72, 0, 0.212) 90%), url("./../img/login/footbal-shoes-header-xcyp1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    overflow-x: hidden;
+    height: fit-content;
+    padding: 1vh;
+}
+
+@media screen and (max-width: 600px) {
+    .login {
+        width: 35vh;
+    }
+
+    .login:hover {
+        box-shadow: none;
+    }
+
+    .senha {
+        width: 100%;
+    }
+
+    html {
+        overflow: hidden;
+    }
+
+    body {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: -50vh;
+        padding: 0;
+    }
 }
