--- a/css/login2.css
+++ b/css/login2.css
@@ -113,7 +113,7 @@
 }
 
 body {
-    background-image: linear-gradient(90deg, rgba(255, 136, 0, 0.8), rgba(134, 72, 0, 0.212) 90%), url("img/login/footbal-shoes-header-xcyp1.jpg");
+    background-image: linear-gradient(90deg, rgba(255, 136, 0, 0.8), rgba(134, 72, 0, 0.212) 90%), url("../img/login/footbal-shoes-header-xcyp1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
